--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "07-RESTSERVER",
+  "name": "07-restserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "keywords": [],
   "author": "",
