File upload added

--- a/.example.env
+++ b/.example.env
@@ -3,5 +3,6 @@ PORT=8081
 MONGODB_CNN=
 SECRETORPRIVATEKEY=
 
-OOGLE_CLIENT_ID=
-OOGLE_SECRET_ID=
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET_ID=
+CLOUDINARY_URL=
